[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/fonts/actual/base/font_button.tres" type="DynamicFont" id=1]
[ext_resource path="res://mods-unpacked/QianMo-QMtato/content/UI/character_invoker_buttons/button_listener.gd" type="Script" id=2]
[ext_resource path="res://resources/themes/button_styles/button_hover.tres" type="StyleBox" id=3]
[ext_resource path="res://resources/themes/button_styles/button_normal.tres" type="StyleBox" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]

[node name="VBoxContainer" type="Control"]
margin_top = 20.0
margin_right = 1920.0
margin_bottom = 1100.0
script = ExtResource( 2 )

[node name="ButtonJ" type="Button" parent="."]
modulate = Color( 0, 1, 0.0862745, 0.705882 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -520.0
margin_top = -480.0
margin_right = -370.0
margin_bottom = -330.0
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
text = "J"

[node name="TouchScreenButtonJ" type="TouchScreenButton" parent="ButtonJ"]
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 2.35938, 2.35938 )
normal = ExtResource( 5 )

[node name="ButtonK" type="Button" parent="."]
modulate = Color( 1, 0, 0.211765, 0.705882 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -320.0
margin_top = -480.0
margin_right = -170.0
margin_bottom = -330.0
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
text = "K"

[node name="TouchScreenButtonK" type="TouchScreenButton" parent="ButtonK"]
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 2.35938, 2.34375 )
normal = ExtResource( 5 )

[node name="ButtonL" type="Button" parent="."]
modulate = Color( 0.290196, 0.521569, 0.964706, 0.705882 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -520.0
margin_top = -280.0
margin_right = -370.0
margin_bottom = -130.0
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
text = "L"

[node name="TouchScreenButtonL" type="TouchScreenButton" parent="ButtonL"]
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 2.375, 2.375 )
normal = ExtResource( 5 )

[node name="ButtonI" type="Button" parent="."]
modulate = Color( 0.921569, 1, 0, 0.705882 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -320.0
margin_top = -280.0
margin_right = -170.0
margin_bottom = -130.0
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
text = "I"

[node name="TouchScreenButtonI" type="TouchScreenButton" parent="ButtonI"]
modulate = Color( 1, 0.0901961, 0.0901961, 0 )
scale = Vector2( 2.35938, 2.35938 )
normal = ExtResource( 5 )

[connection signal="pressed" from="ButtonJ/TouchScreenButtonJ" to="." method="_on_TouchScreenButtonJ_pressed"]
[connection signal="pressed" from="ButtonK/TouchScreenButtonK" to="." method="_on_TouchScreenButtonK_pressed"]
[connection signal="pressed" from="ButtonL/TouchScreenButtonL" to="." method="_on_TouchScreenButtonL_pressed"]
[connection signal="pressed" from="ButtonI/TouchScreenButtonI" to="." method="_on_TouchScreenButtonI_pressed"]
